Use Integer autoboxing in a couple of places